# fastApiProject1

./: pyproject.toml
